tests/functional/repl_characterization/data/regression_l145.test
@args --debugger
  info: breakpoint reached

debugger should not crash now, but also not show any with variables
  nix-repl> :st
  0: error: breakpoint reached
  «none»:0
  Env level 0
  static: puppy

  Env level 1
  static:

  Env level 2
  abort baseNameOf break builtins derivation derivationStrict dirOf false fetchGit fetchMercurial fetchTarball fetchTree fromTOML import isNull map null placeholder removeAttrs scopedImport throw toString true
  error:
         … while evaluating the file '$TEST_DATA/regression_l145.nix':

         … while calling the 'break' builtin
           at $TEST_DATA/regression_l145.nix:5:3:
              4| in
              5|   builtins.break { }
               |   ^
              6|

         error: breakpoint reached\n
